Fix for hang during Shockwave registration and problems with NPN_PostURL bug 108966 r=av sr=darin